# miltech-cpp-course

./: .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
homework_01/src/: main.cpp
homework_02/: CMakeLists.txt  input.txt  simulation.txt  targets.txt
homework_02/data/: test.txt
homework_02/data/output/: output.csv
homework_02/src/: main.cpp  main.rar
homework_03/: CMakeLists.txt  ammo.json  config.json  simulation.json  simulation_example.json  targets.json
homework_03/src/: main.cpp  main.rar
homework_04/: .gitignore  CMakeLists.txt  output.txt
homework_04/.devcontainer/: Dockerfile  devcontainer.json
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt  CMakePresets.json  input.txt  output.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_07/: CMakeLists.txt
homework_07/modules/: analytical_solver.ixx  factory.ixx  file_config_loader.ixx  interfaces.ixx  json_target_provider.ixx  mission_processor.ixx  mission_types.ixx  simulation_writer.ixx
homework_07/src/: main.cpp
homework_08/: CMakeLists.txt
homework_08/include/: MissionProcessor.hpp
homework_08/include/config/: ComponentFactory.hpp  FileConfigLoader.hpp
homework_08/include/interfaces/: IBallisticSolver.hpp  ITargetProvider.hpp
homework_08/include/providers/: JsonTargetProvider.hpp
homework_08/include/solvers/: AnalyticalSolver.hpp
homework_08/src/: MissionProcessor.cpp  main.cpp
homework_08/src/config/: ComponentFactory.cpp
homework_08/src/providers/: JsonTargetProvider.cpp
homework_08/src/solvers/: AnalyticalSolver.cpp
homework_09/: CMakeLists.txt  simulation.json
homework_09/data/: ammo.json  ballistic_table.txt  config.json  targets.json
homework_09/include/: BallisticTable.hpp  MissionProcessor.hpp  SimulationWriter.hpp  Types.hpp
homework_09/include/config/: ComponentFactory.hpp
homework_09/include/interfaces/: IConfigLoader.hpp  IDroneState.hpp
homework_09/include/solvers/: TableSolver.hpp
homework_09/include/states/: DroneContext.hpp  DroneStates.hpp
homework_09/src/: MissionProcessor.cpp  SimulationWriter.cpp  main.cpp
homework_09/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
homework_09/src/solvers/: BallisticTable.cpp  TableSolver.cpp
homework_09/src/states/: DroneStates.cpp
